Complete initial FNN stock price predictor

--- a/1_Feedforward-Neural-Networks/FNN_Stock_Price_Prediction/notebooks/1_data_exploration.ipynb
+++ b/1_Feedforward-Neural-Networks/FNN_Stock_Price_Prediction/notebooks/1_data_exploration.ipynb
@@ -2073,6 +2073,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Price', 'Open', 'High', 'Low', 'Vol.', 'Change %', 'EPS',\n",
+       "       'Price_Return', 'Log_Return', 'Volatility', 'Moving_Average', 'RSI',\n",
+       "       'MACD', 'Sharpe_Ratio', 'Max_Drawdown', 'Month_sine', 'Month_cosine'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
