Complete Autoregression Linear Model for simple series forecasting

--- a/1_Feedforward-Neural-Networks/FNN_Stock_Price_Prediction/notebooks/1_data_exploration.ipynb
+++ b/1_Feedforward-Neural-Networks/FNN_Stock_Price_Prediction/notebooks/1_data_exploration.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'x86_64'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import platform\n",
+    "platform.machine()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
    "outputs": [],
