--- a/1_Feedforward-Neural-Networks/FNN_Stock_Price_Prediction/notebooks/3_Autoregressive_Linear_Model_Stock_Forecasting.ipynb
+++ b/1_Feedforward-Neural-Networks/FNN_Stock_Price_Prediction/notebooks/3_Autoregressive_Linear_Model_Stock_Forecasting.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "from tensorflow.keras.layers import Input, Dense\n",
     "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.optimizers import SGD, Adam\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
