Add Further Explorations contect

--- a/2_Recurrent-Neural-Networks/practical/3_LSTM_long_term_memory.ipynb
+++ b/2_Recurrent-Neural-Networks/practical/3_LSTM_long_term_memory.ipynb
@@ -6145,10 +6145,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Further Explorations\n",
+    "\n",
+    "- Explore consequence when label data is further apart instead of consecutive index\n",
+    "\n",
+    "  - i.e 0, 5, 10 instead of 1, 2, 3\n",
+    "\n",
+    "- Explore how performnace of globalMaxPooling for SimpleRNN and GRU\n",
+    "\n",
+    "- Explore stacking LSTMs unit\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
