--- a/3_Convolutional-Neural-Networks/Fashion_MNIST_GrayScale_CNN.ipynb
+++ b/3_Convolutional-Neural-Networks/Fashion_MNIST_GrayScale_CNN.ipynb
@@ -8,19 +8,12 @@
    "source": [
     "import tensorflow as tf\n",
     "\n",
+    "from tensorflow.keras.layers import Input, Conv2D, Dense, Flatten, Dropout\n",
+    "from tensorflow.keras.models import Model\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras.layers import Input, Conv2D, Dense, Flatten, Dropout\n",
-    "from tensorflow.keras.models import Model"
    ]
   },
   {
@@ -126,7 +119,7 @@
     "kernel_strides = 2 # img dimension halved after every convolution\n",
     "\n",
     "i = Input(shape=x_train[0].shape)\n",
-    "x = Conv2D(32, kernel_size, kernel_strides, activation = 'relu')(i)\n",
+    "x = Conv2D(32, kernel_size, kernel_strides, activation = 'relu')(i) # filter here is 1 x 3 x 3 x 32 (because grayscale)\n",
     "x = Conv2D(64, kernel_size, kernel_strides, activation='relu')(x)\n",
     "x = Conv2D(128, kernel_size, kernel_strides, activation='relu')(x)\n",
     "\n",
